--- a/src/view/AdminView.form
+++ b/src/view/AdminView.form
@@ -212,7 +212,7 @@
               </grid>
             </children>
           </grid>
-          <grid id="76a96" layout-manager="GridLayoutManager" row-count="4" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
+          <grid id="76a96" binding="pnl_book" layout-manager="GridLayoutManager" row-count="4" column-count="5" same-size-horizontally="false" same-size-vertically="false" hgap="-1" vgap="-1">
             <margin top="0" left="0" bottom="0" right="0"/>
             <constraints>
               <tabbedpane title="Yeni Kiralama"/>
